k8s/09-seismotracker-lightdash-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seismotracker-lightdash
  namespace: default
  labels:
    app: seismotracker-lightdash
spec:
  replicas: 1
  selector:
    matchLabels:
      app: seismotracker-lightdash
  template:
    metadata:
      labels:
        app: seismotracker-lightdash
    spec:
      containers:
      - name: seismotracker-lightdash
        image: ghcr.io/konamata/seismotracker/lightdash:arm64-latest
        imagePullPolicy: Always
        resources:
          requests:
            memory: "256Mi"
            cpu: "250m"
          limits:
            memory: "999Gi"
            cpu: "10000m"
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: lightdash-volume
          mountPath: /usr/app/dbt
      volumes:
      - name: lightdash-volume
        persistentVolumeClaim:
          claimName: lightdash-pvc
