k8s/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  namespace: nginx
  labels:
    app: nginx
    type: front-end

spec:
  type: ClusterIP
  ports:
  - targetPort: 80
    port: 80
  selector:
    app: nginx
    type: front-end
