k8s/10-seismotracker-lightdash-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seismotracker-lightdash
  namespace: default
spec:
  selector:
    app: seismotracker-lightdash
  ports:
  - protocol: TCP
    port: 8081
    targetPort: 8081
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: seismotracker-lightdash
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: lightdash.home.il1.nl
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: seismotracker-lightdash
            port:
              number: 8081
  tls:
  - hosts:
    - lightdash.home.il1.nl
    secretName: home-il1-nl-production-tls
